test/should-fail/vsgc2073.f3
/*
 * Regression test VSGC-2073: Too many forward reference warnings generated by the compiler
 *
 * @test/warning
 */

import f3.animation.KeyValue;

class A {
    var y;
    init {y = x;}
    postinit {y = x;}
}

class B extends A {
    override var y = bind x;
}

var begin = at (0s) {x}

var x : KeyValue;
